# speak

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json
.claude/: settings.json
.claude/skills/validate/: SKILL.md
.github/workflows/: release.yml
scripts/: npm-install.js  smoke-npm-local.mjs
skills/speak/: SKILL.md
skills/speak/references/: cli-reference.md  sdk.md
speak-core/: Cargo.toml
speak-core/src/: download.rs  helper.rs  lib.rs  text.rs
src/: main.rs  player.rs  wavstream.rs
